logger + process status check added
