# apiserver/handler/profile/processes.go
@@ -6,20 +6,19 @@ import (
 	M "probe/model"
 )
 
-func (api *R) getProcessStatus() (data map[string]any, err error) {
+func (api *R) getProcessStatus() (data []M.ProcessBeat, err error) {
 	db, ok := api.DB.Get(string(M.PROCESS))
 	if !ok {
 		return data, fmt.Errorf("NO_PROCESS_DETAIL")
 	}
 
 	var p M.ProcessBeat
-	data = make(map[string]any)
 	for v := range db.Receive() {
 		err := json.Unmarshal(v, &p)
 		if err != nil {
 			return data, err
 		}
-		data[p.Name] = p
+		data = append(data, p)
 	}
 	return
 }
