# docs/swagger.json
@@ -794,7 +794,13 @@
                 "summary": "Get Processes Info",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/M.ProcessBeat"
+                            }
+                        }
                     }
                 }
             }
@@ -1285,6 +1291,35 @@
                     "enum": [
                         "ping"
                     ]
+                }
+            }
+        },
+        "M.ProcessBeat": {
+            "type": "object",
+            "properties": {
+                "counter": {
+                    "type": "integer"
+                },
+                "error": {
+                    "type": "string"
+                },
+                "et": {
+                    "type": "string"
+                },
+                "given": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "polled": {
+                    "type": "integer"
+                },
+                "st": {
+                    "type": "string"
+                },
+                "t": {
+                    "type": "string"
                 }
             }
         },
